sistema_02/style.css
  body {
    padding: 0;
    margin: 0;
    background: #ffffff;
     height:100%;
     overflow: hidden;

      -moz-user-select: none;
      -webkit-user-select: none;
      -ms-user-select:none;
       user-select:none;
       -o-user-select:none;"
        unselectable="on"
        onselectstart="return false;"
        onmousedown="return false;"

  -webkit-touch-callout: none; /* iOS Safari */
  -webkit-user-select: none; /* Safari */
   -khtml-user-select: none; /* Konqueror HTML */
     -moz-user-select: none; /* Firefox */
      -ms-user-select: none; /* Internet Explorer/Edge */
          user-select: none; /* Non-prefixed version, currently
                                supported by Chrome and Opera */

  }
  html{
    height:100%;
  }

#sketchDiv {
  height:80%;
  overflow:hidden;
  //background-color: #F00;
  margin: 50px;
  font-family: 'Roboto Mono', monospace;
  font-size: 10pt;
  color: #222;
  font-weight: 200;

}

#sketchDiv a{
  text-decoration: none;
  color: #222;
  font-weight: 200;
}

#sketchDiv a:active{
  text-decoration: none;
  color: #222;
  font-weight: 400;
}

#sketchDiv a:hover{
  text-decoration: none;
  color: #222;
  font-weight: 400;
}

#sketchDiv a:visited{
  text-decoration: none;
  color: #222;
  font-weight: 200;
}



.p5Canvas{
  padding: 0;
  margin: auto;
  display: block;

}

